recursion.logo.square.FourSquare.scala.code
override def run() {
  var i=0
  for (i -> 0 to 4) {
    avance(100.00)
    droite(90.00)
  }
 
}